--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -5,6 +5,14 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.scrollable {
+    width: 200px;
+    height: 70px;
+    margin: 0;
+    padding: 0;
+    overflow: scroll;
+}
+
 a{
     text-decoration: none;
 }
@@ -44,8 +52,8 @@ table tr td{
 }
 
 .form-center{
-    align-items: center;
-    text-align: center;
+    /* align-items: center; */
+    /* text-align: center; */
     display: flex;
     justify-content: center;
 }
@@ -56,6 +64,14 @@ table tr td{
 
 .no-message{
     color: #ff4d4d;
+}
+
+.success{
+    color: blue;
+}
+
+.error{
+    color: red;
 }
 /* --------------------- */
 
