--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,14 @@
   width: 100%;
 }
 
+.form-center{
+  /* align-items: center; */
+  /* text-align: center; */
+  display: flex;
+  justify-content: center;
+}
+
+
 a {
   text-decoration: none;
 }
