--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -167,6 +167,30 @@ table tr td{
 
 
 
+/* =============home.php category=========== */
+
+  #bg-blue{
+    background-color:#3498db;
+    border: 2px solid #34495e;
+  }
+  #bg-violet{
+    background-color: #9b59b6;
+    border: 2px solid #34495e;
+  }
+  #bg-yellow{
+    background-color: #f1c40f;
+    border: 2px solid #34495e;
+  }
+  #bg-red{
+    background-color: #e74c3c;
+    border: 2px solid #34495e;
+  }
+
+  /* ============================ */
+
+
+
+
 
 /* ----------main content---------- */
 .main-content{
