--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
 }
+body {
+  padding-top: 100px; /* adjust the value to match the height of your navbar */
+}
 
 .logo {
   width: 10%;
@@ -242,6 +245,9 @@ fieldset{
 /* ================MEDIA QUERIES============= */
 /* ================for mobile============ */
 @media(max-width: 768px) {
+  body {
+    padding-top: 70px; /* adjust the value to match the height of your navbar */
+  }
 
   /* -------carousel------- */
   .d-block {
